Updated footer to include links.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <body>
     <h1>Welcome to Sarah's weather forecast</h1>
     <footer>
-      Coded by Sarah Pakes. Code hosted on GitHub and website hosted on Netlify
+      Coded by
+      <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>. Code
+      hosted on
+      <a href="https://github.com/s-sakep/sp-weather-forecast" target="_blank"
+        >GitHub</a
+      >
+      and website hosted on
+      <a href="https://sarahs-weather-forecast.netlify.app/" target="_blank"
+        >Netlify</a
+      >.
     </footer>
   </body>
 </html>
