--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <h1>Welcome to Sarah's weather forecast</h1>
     <footer>
       Coded by
-      <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>. Code
-      hosted on
+      <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>, open
+      sourced on
       <a href="https://github.com/s-sakep/sp-weather-forecast" target="_blank"
         >GitHub</a
       >
-      and website hosted on
+      and hosted by
       <a href="https://sarahs-weather-forecast.netlify.app/" target="_blank"
         >Netlify</a
       >.
