Add HTML content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Sarah's weather forecast</title>
   </head>
   <body>
-    <h1>Welcome to Sarah's weather forecast</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a location..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <body>
+      <h1>Oxford</h1>
+      <p>Wednesday 8 November 2023 | 15:49</p>
+      <div>☁️ 10° Clouds</div>
+      <div>High: 12°, Low: 10°, Humidity: 85%, Wind: 3 mph</div>
+      <hr />
+      <h2>Next five days</h2>
+      <p>Monday</p>
+      <p>☁️ H: 19°</p>
+      <p>Tuesday</p>
+      <p>☁️ H: 19°</p>
+      <p>Wednesday</p>
+      <p>☁️ H: 19°</p>
+      <p>Thursday</p>
+      <p>☁️ H: 18°</p>
+      <p>Friday</p>
+      <p>☁️ H: 16°</p>
+    </body>
     <footer>
       Coded by
       <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>, open
