Created css file and added styling for earch bar and button, updated font and background colour.

--- a/index.html
+++ b/index.html
@@ -4,32 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sarah's weather forecast</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a location..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <body>
-      <h1>Oxford</h1>
-      <p>Wednesday 8 November 2023 | 15:49</p>
-      <div>☁️ 10° Clouds</div>
-      <div>High: 12°, Low: 10°, Humidity: 85%, Wind: 3 mph</div>
-      <hr />
-      <h2>Next five days</h2>
-      <p>Monday</p>
-      <p>☁️ H: 19°</p>
-      <p>Tuesday</p>
-      <p>☁️ H: 19°</p>
-      <p>Wednesday</p>
-      <p>☁️ H: 19°</p>
-      <p>Thursday</p>
-      <p>☁️ H: 18°</p>
-      <p>Friday</p>
-      <p>☁️ H: 16°</p>
-    </body>
+    <div class="weather-app">
+      <header>
+        <form class="search-form">
+          <input
+            class="search-form-input"
+            type="search"
+            placeholder="Enter a location..."
+            required
+          />
+          <input class="search-form-button" type="submit" value="Search" />
+        </form>
+      </header>
+      <body>
+        <h1>Oxford</h1>
+        <p>Wednesday 8 November 2023 | 15:49</p>
+        <div>☁️ 10° Clouds</div>
+        <div>High: 12°, Low: 10°, Humidity: 85%, Wind: 3 mph</div>
+        <hr />
+        <h2>Next five days</h2>
+        <p>Monday</p>
+        <p>☁️ H: 19°</p>
+        <p>Tuesday</p>
+        <p>☁️ H: 19°</p>
+        <p>Wednesday</p>
+        <p>☁️ H: 19°</p>
+        <p>Thursday</p>
+        <p>☁️ H: 18°</p>
+        <p>Friday</p>
+        <p>☁️ H: 16°</p>
+      </body>
+    </div>
     <footer>
       Coded by
       <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>, open
