--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@
       </body>
     </div>
     <footer>
-      Coded by
-      <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>, open
-      sourced on
-      <a href="https://github.com/s-sakep/sp-weather-forecast" target="_blank"
-        >GitHub</a
-      >
-      and hosted by
-      <a href="https://sarahs-weather-forecast.netlify.app/" target="_blank"
-        >Netlify</a
-      >.
+      <p>
+        Coded by
+        <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>,
+        open sourced on
+        <a href="https://github.com/s-sakep/sp-weather-forecast" target="_blank"
+          >GitHub</a
+        >
+        and hosted by
+        <a href="https://sarahs-weather-forecast.netlify.app/" target="_blank"
+          >Netlify</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
