Added h1, h2, p and footer styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </body>
     </div>
     <footer>
-      <p>
+      <p class="footer">
         Coded by
         <a href="https://github.com/s-sakep" target="_blank">Sarah Pakes</a>,
         open sourced on
