--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="weather-app">
@@ -25,23 +31,37 @@
           <input class="search-form-button" type="submit" value="Search" />
         </form>
       </header>
+
       <body>
         <h1>Oxford</h1>
         <p>Wednesday 8 November 2023 | 15:49</p>
         <div>☁️ 10° Clouds</div>
         <div>High: 12°, Low: 10°, Humidity: 85%, Wind: 3 mph</div>
         <hr />
+
         <h2>Next five days</h2>
-        <p>Monday</p>
-        <p>☁️ H: 19°</p>
-        <p>Tuesday</p>
-        <p>☁️ H: 19°</p>
-        <p>Wednesday</p>
-        <p>☁️ H: 19°</p>
-        <p>Thursday</p>
-        <p>☁️ H: 18°</p>
-        <p>Friday</p>
-        <p>☁️ H: 16°</p>
+        <div class="row">
+          <div class="col five-forecast">
+            <p>Monday</p>
+            <p>☁️ H: 19°</p>
+          </div>
+          <div class="col five-forecast">
+            <p>Tuesday</p>
+            <p>☁️ H: 19°</p>
+          </div>
+          <div class="col five-forecast">
+            <p>Wednesday</p>
+            <p>☁️ H: 19°</p>
+          </div>
+          <div class="col five-forecast">
+            <p>Thursday</p>
+            <p>☁️ H: 18°</p>
+          </div>
+          <div class="col five-forecast">
+            <p>Friday</p>
+            <p>☁️ H: 16°</p>
+          </div>
+        </div>
       </body>
     </div>
     <footer>
