Added font awesome plus five day forecast icons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/41ae05d9be.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="weather-app">
@@ -43,23 +47,28 @@
         <div class="row">
           <div class="col five-forecast">
             <p>Monday</p>
-            <p>☁️ H: 19°</p>
+            <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
+            <p>H: 19°</p>
           </div>
           <div class="col five-forecast">
             <p>Tuesday</p>
-            <p>☁️ H: 19°</p>
+            <i class="fa-solid fa-wind five-icon"></i>
+            <p>H: 19°</p>
           </div>
           <div class="col five-forecast">
             <p>Wednesday</p>
-            <p>☁️ H: 19°</p>
+            <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
+            <p>H: 19°</p>
           </div>
           <div class="col five-forecast">
             <p>Thursday</p>
-            <p>☁️ H: 18°</p>
+            <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
+            <p>H: 18°</p>
           </div>
           <div class="col five-forecast">
             <p>Friday</p>
-            <p>☁️ H: 16°</p>
+            <i class="fa-solid fa-cloud five-icon"></i>
+            <p>H: 16°</p>
           </div>
         </div>
       </body>
