--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sarah's weather forecast</title>
     <link rel="stylesheet" href="src/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap"
-      rel="stylesheet"
-    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <script
       src="https://kit.fontawesome.com/41ae05d9be.js"
       crossorigin="anonymous"
@@ -37,12 +38,41 @@
       </header>
 
       <body>
-        <h1>Oxford</h1>
-        <p>Wednesday 8 November 2023 | 15:49</p>
-        <div>☁️ 10° Clouds</div>
-        <div>High: 12°, Low: 10°, Humidity: 85%, Wind: 3 mph</div>
-        <hr />
+        <div class="row">
+          <div class="col-6">
+            <h1>Oxford</h1>
+          </div>
+          <div class="col-6">
+            <div class="units">
+              Display temperature in <a href="#">°C</a> |
+              <a href="#">°F</a>
+            </div>
+          </div>
+        </div>
 
+        <div class="today-date">Wednesday 8 November 2023 | 15:49</div>
+        <div class="row">
+          <div class="col-6">
+            <i class="fa-solid fa-cloud-showers-heavy today-icon"></i>
+          </div>
+          <div class="col-6">
+            <div class="today-temp">7°</div>
+
+            <div class="current-conditions">Clouds</div>
+            <br />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <p>High: 8°</p>
+            <p>Low: 6°</p>
+          </div>
+          <div class="col-6">
+            <p>Humidity: 93%</p>
+            <p>Wind: 4 mph</p>
+          </div>
+        </div>
+        <hr />
         <h2>Next five days</h2>
         <div class="row">
           <div class="col five-forecast">
