Added flexbox to five day forecast

--- a/index.html
+++ b/index.html
@@ -71,30 +71,31 @@
             <p>Wind: 4 mph</p>
           </div>
         </div>
+
         <hr />
         <h2>Next five days</h2>
-        <div class="row">
-          <div class="col five-forecast">
+        <div class="five-day-container">
+          <div>
             <p>Monday</p>
             <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
             <p>H: 19°</p>
           </div>
-          <div class="col five-forecast">
+          <div>
             <p>Tuesday</p>
             <i class="fa-solid fa-wind five-icon"></i>
             <p>H: 19°</p>
           </div>
-          <div class="col five-forecast">
+          <div>
             <p>Wednesday</p>
             <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
             <p>H: 19°</p>
           </div>
-          <div class="col five-forecast">
+          <div>
             <p>Thursday</p>
             <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
             <p>H: 18°</p>
           </div>
-          <div class="col five-forecast">
+          <div>
             <p>Friday</p>
             <i class="fa-solid fa-cloud five-icon"></i>
             <p>H: 16°</p>
@@ -102,6 +103,7 @@
         </div>
       </body>
     </div>
+
     <footer>
       <p class="footer">
         Coded by
