Added flexbox to remaining current weather data

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </header>
 
       <body>
-        <div class="row">
-          <div class="col-6">
+        <div class="location-unit-container">
+          <div>
             <h1>Oxford</h1>
           </div>
-          <div class="col-6">
+          <div>
             <div class="units">
               Display temperature in <a href="#">°C</a> |
               <a href="#">°F</a>
@@ -50,23 +50,24 @@
         </div>
 
         <div class="today-date">Wednesday 8 November 2023 | 15:49</div>
-        <div class="row">
-          <div class="col-6">
+
+        <div class="current-conditions-container">
+          <div>
             <i class="fa-solid fa-cloud-showers-heavy today-icon"></i>
           </div>
-          <div class="col-6">
+          <div>
             <div class="today-temp">7°</div>
-
             <div class="current-conditions">Clouds</div>
             <br />
           </div>
         </div>
-        <div class="row">
-          <div class="col-6">
+
+        <div class="current-key-stats-container">
+          <div>
             <p>High: 8°</p>
             <p>Low: 6°</p>
           </div>
-          <div class="col-6">
+          <div>
             <p>Humidity: 93%</p>
             <p>Wind: 4 mph</p>
           </div>
