--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       src="https://kit.fontawesome.com/41ae05d9be.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
