Added API and JS for current temperature

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <i class="fa-solid fa-cloud-showers-heavy today-icon"></i>
           </div>
           <div>
-            <div class="today-temp">7°</div>
+            <div class="today-temp" id="current-temp">°</div>
             <div class="current-conditions">Clouds</div>
             <br />
           </div>
