JS added for current conditions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
           <div>
             <div class="today-temp" id="current-temp">°</div>
-            <div class="current-conditions">Clouds</div>
+            <div class="current-conditions" id="current-conditions"></div>
             <br />
           </div>
         </div>
