JS added for current humidity

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Low: 6°</p>
           </div>
           <div>
-            <p>Humidity: 93%</p>
+            <p>Humidity: <span id="current-humidity"></span>%</p>
             <p>Wind: 4 mph</p>
           </div>
         </div>
