Updated current weather data to remove high and low and add feels like. Added JS for wind speed and feels like.

--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
 
         <div class="current-key-stats-container">
           <div>
-            <p>High: 8°</p>
-            <p>Low: 6°</p>
+            <p>Feels like: <span id="feels-like"></span>°</p>
           </div>
           <div>
             <p>Humidity: <span id="current-humidity"></span>%</p>
-            <p>Wind: 4 mph</p>
+          </div>
+          <div>
+            <p>Wind: <span id="current-wind"></span> mph</p>
           </div>
         </div>
 
