Added JS for updating today's date and time

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <div class="today-date">Wednesday 8 November 2023 | 15:49</div>
+        <div class="today-date" id="today-date-time"></div>
 
         <div class="current-conditions-container">
           <div>
