Update JS for today's icon

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         <div class="today-date" id="today-date-time"></div>
 
         <div class="current-conditions-container">
-          <div>
-            <i class="fa-solid fa-cloud-showers-heavy today-icon"></i>
-          </div>
+          <div id="today-icon"></div>
           <div>
             <div class="today-temp" id="current-temp">°</div>
             <div class="current-conditions" id="current-conditions"></div>
