Updated HTML and CSS for five day forecast temp

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div>
             <div class="units">
-              Display temperature in <a href="#">°C</a> |
+              Display temp in <a href="#">°C</a> |
               <a href="#">°F</a>
             </div>
           </div>
@@ -80,27 +80,27 @@
           <div>
             <p>Monday</p>
             <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
-            <p>H: 19°</p>
+            <p><span class="five-day-high">19°</span> | 9°</p>
           </div>
           <div>
             <p>Tuesday</p>
             <i class="fa-solid fa-wind five-icon"></i>
-            <p>H: 19°</p>
+            <p><span class="five-day-high">19°</span> | 9°</p>
           </div>
           <div>
             <p>Wednesday</p>
             <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
-            <p>H: 19°</p>
+            <p><span class="five-day-high">19°</span> | 9°</p>
           </div>
           <div>
             <p>Thursday</p>
             <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
-            <p>H: 18°</p>
+            <p><span class="five-day-high">19°</span> | 9°</p>
           </div>
           <div>
             <p>Friday</p>
             <i class="fa-solid fa-cloud five-icon"></i>
-            <p>H: 16°</p>
+            <p><span class="five-day-high">19°</span> | 9°</p>
           </div>
         </div>
       </body>
