Injected the five day forecast html via JavaScript

--- a/index.html
+++ b/index.html
@@ -76,33 +76,7 @@
 
         <hr />
         <h2>Next five days</h2>
-        <div class="five-day-container">
-          <div>
-            <p>Monday</p>
-            <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
-            <p><span class="five-day-high">19°</span> | 9°</p>
-          </div>
-          <div>
-            <p>Tuesday</p>
-            <i class="fa-solid fa-wind five-icon"></i>
-            <p><span class="five-day-high">19°</span> | 9°</p>
-          </div>
-          <div>
-            <p>Wednesday</p>
-            <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
-            <p><span class="five-day-high">19°</span> | 9°</p>
-          </div>
-          <div>
-            <p>Thursday</p>
-            <i class="fa-solid fa-cloud-showers-heavy five-icon"></i>
-            <p><span class="five-day-high">19°</span> | 9°</p>
-          </div>
-          <div>
-            <p>Friday</p>
-            <i class="fa-solid fa-cloud five-icon"></i>
-            <p><span class="five-day-high">19°</span> | 9°</p>
-          </div>
-        </div>
+        <div class="five-day-container" id="five-day-forecast"></div>
       </body>
     </div>
 
